# dnqr.snake_clone

./: CMakeLists.txt  README.md  snake.c  vcpkg-configuration.json  vcpkg_configure.sh
